--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.15MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.53MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇫🇷 法国-1.37MB/s(Youtube:不良林), server: 51.38.118.42, port: 817, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-4.91MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-14.89MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30010, type: trojan, password: 666dcf90-7f85-4f30-a36f-c1bffcf06b32, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.70MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇩🇪 德国-1.03MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇩🇪 德国-2.23MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇬🇧 英国-2.17MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
-  - {name: 🇮🇹 意大利-879.5KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇨🇳 中国-5.41MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-403.3KB/s(Youtube:不良林), server: aop.ssfree.ru, port: 443, type: vmess, uuid: 582713fc-09d7-11ed-9ad4-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: aop.ssfree.ru}}
+  - {name: 🇺🇸 美国-257.8KB/s(Youtube:不良林), server: 51.81.223.20, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.00MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-2.76MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: 64.112.42.73, port: 443, type: vmess, uuid: 4946f776-0af3-49f3-acad-d157475d253e, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /P0S5U7NK, ws-headers: {Host: 64.112.42.73}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-403.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-403.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-403.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-403.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-403.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-403.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.53MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.91MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.89MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.70MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.03MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.23MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-879.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-403.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-257.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
