--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-443.3KB/s(Youtube:不良林), server: 172.99.188.71, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇦 加拿大-1.00MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.96MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-934.2KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-1.19MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 172.99.188.71, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇺🇸 美国-2.59MB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇫🇷 法国-1.41MB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-2.17MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
   - {name: 🇨🇦 加拿大-2.76MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-443.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-443.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-443.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-443.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-443.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-443.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-443.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇺🇸 美国-934.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.59MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.17MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
