--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.40MB/s(Youtube:不良林), server: 172.99.188.71, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-2.23MB/s(Youtube:不良林), server: 134.195.196.149, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇩🇪 德国-2.57MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-395.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇩🇪 德国-275.7KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇨🇦 加拿大-2.76MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-2.26MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.90MB/s(Youtube:不良林), server: 134.195.196.149, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇩🇪 德国-1.19MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇦 加拿大-868.3KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.00MB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.70MB/s(Youtube:不良林), server: 134.195.196.149, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-3.04MB/s(Youtube:不良林), server: 134.195.196.149, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇦 加拿大-2.48MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-1.73MB/s(Youtube:不良林), server: 134.195.196.149, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-275.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-275.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-275.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-275.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-275.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-275.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.40MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.1KB/s(Youtube:不良林)
-      - 🇩🇪 德国-275.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.76MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.26MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.90MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.19MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-868.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.00MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.70MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.04MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-2.48MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.73MB/s(Youtube:不良林)
